# CShmup

./: CMakeLists.txt  main.c
include/: arena.h  array.h  collision.h  constants.h  entity.h  game_manager.h  game_math.h  game_state.h  levels.h  log.h  macro.h  math.h  movement.h  pickup.h  player.h  quadtree.h  renderer.h  transform.h
src/: CMakeLists.txt  arena.c  array.c  game_manager.c  quadtree.c
